started JavaScript fundamentals tutorials

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>webpack starterkit</title>
+  <title>JavaScript Fundamentals</title>
+  <link rel="stylesheet" type="text/scss" href="styles/index.scss">
 </head>
 <body>
-  <h1>webpack starter</h1>
-  <p>✨ A lightweight foundation for your next webpack based frontend project.</p>
+  <h1>JavaScript Fundamentals</h1>
+  <script type="text/js" src="scripts/index.js"></script>
 </body>
 </html>
